--- a/templates/home.html
+++ b/templates/home.html
@@ -156,6 +156,7 @@ body {
 .stats-section {
     padding: 4rem 0;
     background-color: rgba(255, 255, 255, 0.17);
+    color: #8b1a1d;
 }
 
 .stat-item {
